--- a/Application/app/src/main/AndroidManifest.xml
+++ b/Application/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.csulb.speakr" >
 
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-feature android:name="android.hardware.camera" android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -31,6 +33,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.csulb.speakr.SelectActionActivity"
+            android:label="@string/app_name"
+            android:parentActivityName="com.csulb.speakr.MainActivity"
+            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
